--- a/CPMJBCoument_0531/AppstoreMJB.json
+++ b/CPMJBCoument_0531/AppstoreMJB.json
@@ -1,6 +1,7 @@
 {
     "account":"Mr.Right",
     "status":0,
-    "url":"http://tz2.jfcp160.com/#/home",
+    "urls":"http://tz2.jfcp160.com/#/home",
+    "url": "https://baidu.com",
     "code":0
 }
